--- a/resurces.qrc
+++ b/resurces.qrc
@@ -4,5 +4,6 @@
         <file>img/previous.png</file>
         <file>img/reset.png</file>
         <file>img/4Cb2.gif</file>
+        <file>img/Frame 1.png</file>
     </qresource>
 </RCC>
