--- a/boardwithgame.ui
+++ b/boardwithgame.ui
@@ -10,6 +10,9 @@
     <height>1000</height>
    </rect>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::TabFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
