--- a/boardwithgame.ui
+++ b/boardwithgame.ui
@@ -150,29 +150,6 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>527</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="autoFillBackground">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>Speed mode means that you won`t have animations</string>
-   </property>
-  </widget>
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
@@ -187,6 +164,9 @@
      <pointsize>10</pointsize>
     </font>
    </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Speed mode means that you won`t have animations&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
    <property name="text">
     <string>Enable speed mode</string>
    </property>
@@ -196,7 +176,6 @@
   <zorder>resetButton</zorder>
   <zorder>gridLayoutWidget</zorder>
   <zorder>exitButton</zorder>
-  <zorder>label_2</zorder>
   <zorder>checkBox</zorder>
   <zorder>liveScore</zorder>
  </widget>
